Use UNION instead of OR
Consolidate data and material variants